# OpenGL-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindSOIL.cmake
include/common/: Navigation.hpp  Rotator.hpp
include/math/: randomized.hpp
include/rendering/: ShaderProgram.hpp  TextureManager.hpp
shaders/: pbr.frag  pbr.vert  template.frag  template.vert
src/common/: Navigation.cpp  Rotator.cpp
src/rendering/: ShaderProgram.cpp  TextureManager.cpp  textures.cpp
